# leptonic-template-csr

./: .gitignore  Cargo.toml  rust-toolchain.toml
src/: app.rs  error_template.rs  main.rs
src/pages/: welcome.rs
style/: main.scss
style/leptonic/components/: alert.scss  app-bar.scss  box.scss  button.scss  card.scss  checkbox.scss  chip.scss  collapsible.scss  color_picker.scss  datetime.scss  drawer.scss  field.scss  form.scss  icon.scss  input.scss  kbd.scss  label.scss  link.scss  modal.scss  popover.scss  progress_bar.scss  quicksearch.scss  radio.scss  select.scss  skeleton.scss  slider.scss  stack.scss  table.scss  tabs.scss  theme.scss  tiptap_editor.scss  toasts.scss  toggle.scss  typography.scss
style/leptonic/general/: reset.scss
style/leptonic/themes/: dark.scss  light.scss
