[package]
name = "leptonic-template-csr"
version = "0.1.0"
edition = "2021"

[package.metadata.leptonic]
# REQUIRED: Leptonic's build-script will copy the Leptonic themes to this directory. Relative to your project root.
style-dir = "style"

# REQUIRED: Leptonic's build-script will copy static JS dependencies to this directory. Relative to your project root.
# Leptonic's `<Root>` component expects JS files to be available at a "js" directory at runtime (for dynamic script includes). Specify a different prop value if you choose a non-stadard location here. 
js-dir = "public/js"

[dependencies]
console_error_panic_hook = "0.1.7"
leptonic = { git = "https://github.com/lpotthast/leptonic", branch = "hooks", features = ["full"] }
leptos = { version = "0.8.15", features = ["csr"] }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.11" }
tracing = "0.1.44"
tracing-wasm = "0.2.1"

[profile.dev]
# Potential to opt-in on higher optimization for our code.
# This may increase incremental compilation times, but will reduce binary size!
opt-level = 0

[profile.dev.package."*"]
# High optimization for our dependencies. This should increase wasm-filesize and performance drastically
# whithout impacting our incremental compilation times.
# It will lead to obscure error messages from third party libraries though. So comment this out when seeing lib errors.
opt-level = 3

# Striving for a minimal wasm-filesize.
[profile.release]
opt-level = "z"
lto = "fat"
debug = 0
strip = true
codegen-units = 1
